[package]
name = "lambda-spy"
version = "0.1.0"
edition = "2021"
authors = ["ClearVector"]
readme = "README.md"
license-file = "LICENSE"

[profile.release]
lto = true          # Enable Link Time Optimization
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.2", features = ["full"] }
nix = { version = "0.26.2", features = ["uio"] }
serde_json = "1.0.91"
lambda-extension = "0.8.0"
